# antarctic-peninsula

./: .gitignore  README.md  pyproject.toml
antarc/: blackbody_cloud_flux.py  era5_read_profiles.py  era5_read_station_broadband.py  ft_stuff.py  get_atm_profs_KGI_incomplete.py  get_atm_profs_rsrc.py  get_era5_from_web.py  get_era5_press_levs_from_web.py  get_inversion.py  get_pyr_stand_files_from_orig.py  get_solar_beam.py  get_surface_albedo_from_file.py  getfilenames.py  humidRS80.py  hypsometric.py  lblrtm_utils.py  load_rad_flux.py  load_ssp_nu.py  loader.py  map_interp.py  met_data_get_from_web.py  plancknu.py  plot_broadband.py  plot_sun_elev.py  pyr_save_stand_files.py  radtran_inputs.py  randomseed  reduce_resolution.py  run_libradtran.py  run_radtran.py  sonde_raw_to_data_denial_format.py  ssp.py  sun_position.py  test_run_libradtran.py
antarc/escudero/: get_atm_profs.py  get_era5_from_web.py  get_era5_from_web_esc.py  get_lwd_flux.py  get_swd_flux.py  met_get_from_web.py  read_era5_rad.py
antarc/marambio/: get_rad_flux.py  load_rad_flux.py
antarc/pwrf_v_sonde/: get_era_profs.py  load_era5.py  load_pwrf.py  load_sonde.py  maketables_2018.py  maketables_2022.py  plot_pwrf_atm_profs.py  plot_pwrf_escudero.py  pwrf_v_sonde_maketables.py
antarctic_peninsula/: pyr_get_stand_files_from_orig.py  pyr_save_stand_files.py
antarctic_peninsula/parameters/: lwd_orig_params.py  swd_orig_params.py
tests/: test_antarctic_peninsula.py  test_plot_sun_elev.py  test_pyr_save_stand_files.py  test_sonde_raw_to_data_denial_format.py
tests/temp/: log_20220205_20220208.txt
(+121 files in other folders)
