[tool.poetry]
name = "antarctic-peninsula"
version = "0.1.0"
description = ""
authors = ["Penny Rowe <1795738+prowe12@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.0"
DateTime = "^4.4"
matplotlib = "^3.5.2"
pytz = "^2022.1"
pandas = "^1.4.3"
netCDF4 = "^1.6.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
scipy = "^1.9.0"
cdsapi = "^0.5.1"
xarray = "^2022.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
